if include_fits_plugins
FITS_SUBDIR=fits
endif
if include_fitsnonlinear_plugins
FITSNONLINEAR_SUBDIR=fits_nonlinear
endif
if include_interpolations_plugins
INTERPOLATIONS_SUBDIR=interpolations
endif

SUBDIRS=linefit autocorrelation crosscorrelation periodogram phase statistics chop $(FITS_SUBDIR) $(FITSNONLINEAR_SUBDIR) $(INTERPOLATIONS_SUBDIR) editor
