SET(fontFolder share/apps/kst/fonts)

########### install files ###############

install(FILES  "symb08.pcf.gz" DESTINATION ${fontFolder})
install(FILES  "symb10.pcf.gz" DESTINATION ${fontFolder})
install(FILES  "symb12.pcf.gz" DESTINATION ${fontFolder})
install(FILES  "symb14.pcf.gz" DESTINATION ${fontFolder})
install(FILES  "symb18.pcf.gz" DESTINATION ${fontFolder})
install(FILES  "symb24.pcf.gz" DESTINATION ${fontFolder})
install(FILES  "adobe-symbol.enc.gz" DESTINATION ${fontFolder})
